# scope-vfx

./: README.md  pyproject.toml
.claude/skills/create-scope-plugin/: SKILL.md  reference.md
src/scope_vfx/: __init__.py  pipeline.py  schema.py
src/scope_vfx/effects/: __init__.py  chromatic.py  vhs.py  warhol.py
