[project]
name = "scope-vfx"
version = "0.1.0"
description = "GPU-accelerated visual effects pack for Daydream Scope"
requires-python = ">=3.12"
license = "MIT"

[project.entry-points."scope"]
scope_vfx = "scope_vfx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_vfx"]
